--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: Faith Jeptoo
-description: Data Analyst | Data Scientist | Designer | Social Media Manager
-theme: jekyll-theme-minimal  
+description: Data Analyst | Data Scientist | Designer | Social Media Managerl  
 show_downloads: true  
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme 
 
 author:
   name: Faith Jeptoo
